compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__invalid_function_type_parameter_name.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1396
expression: "fn identity(value: someType) { value }"
---
----- SOURCE CODE
fn identity(value: someType) { value }

----- ERROR
error: Invalid type variable name
  ┌─ /src/one/two.rakun:1:20
  │
1 │ fn identity(value: someType) { value }
  │                    ^^^^^^^^ This is not a valid type variable name

Hint: Type Variable names start with a lowercase letter and contain a-z, 0-
9, or _.
Try: some_type
